# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("fit.headers") {
    include_dirs = [ "include" ]
}

source_set("fit") {
  headers = [
    "lib/fit/defer.h",
    "lib/fit/function.h",
    "lib/fit/function_traits.h",
    "lib/fit/internal/compiler.h",
    "lib/fit/internal/function.h",
    "lib/fit/internal/inline_any.h",
    "lib/fit/internal/result.h",
    "lib/fit/internal/utility.h",
    "lib/fit/nullable.h",
    "lib/fit/result.h",
    "lib/fit/thread_checker.h",
    "lib/fit/thread_safety.h",
    "lib/fit/traits.h",
    "lib/fit/inline_any.h",
  ]

  public = []
  foreach(header, headers) {
      public += [ "include/$header" ]
  }

  public_configs = [ ":fit.headers" ]

  sources = []
  public_deps = [ "//stdcompat" ]
}

#group("tests") {
#  testonly = true
#  deps = [ "test:tests" ]
#}
