# If not building for Fuchsia (e.g., linux, macos) then binaries need to get
# zircon headers directly from source. Otherwise they come from sysroot.

config("public_config") {
  include_dirs = [ "." ]
  visibility = [ ":*" ]
}
# These headers are exported for use in building non-fuchsia-host binaries.
source_set("public") {
  public = [
    "zircon/analyzer.h",
    "zircon/compiler.h",
    "zircon/errors.h",
    "zircon/limits.h",
    "zircon/rights.h",
    "zircon/syscalls/object.h",
    "zircon/types.h",
  ]
  # Since this doesn't actually compile any code, don't let it contribute any
  # implicit link inputs from default configs.
  configs = []
  public_configs = [ ":public_config" ]
}

