# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("zx-panic-libc") {
  sources = [ "zx_panic_libc.cc" ]
  deps = [ "//public" ]
}

#source_set("as_source") {
#  visibility = [ "//zircon/system/ulib/c:*" ]
#  sources = [ "zx_panic_libc.cc" ]
#  public_deps = [ "//zircon/system/public" ]
#
#  # This library is linked into libc, which is used by libfuzzer.
#  # Don't instrument it to avoid getting noise in code coverage.
#  # TODO(https://fxbug.dev/42099340): Once a cleaner solution is found, remove this.
#  configs += [ "//build/config/zircon:no_fuzzer" ]
#}
